cmake_minimum_required(VERSION 3.26)
project(CPP)

set(CMAKE_CXX_STANDARD 17)

add_executable(CPP DAY-4/floyd.cpp
        DAY-3/Q11_ATM.cpp
        DAY-3/Q12_ShoppingList.cpp
        DAY-1/train.c
        DAY-1/bsort.c
        DAY-1/insearch_of_stu.c
        DAY-1/palin_str.c
        DAY-2/struct_dist.c
        DAY-2/fibo_recur.c
        DAY-2/count_vow_con.c
        DAY-2/AU_sem_marking.c
        DAY-2/str_fun_without_strh.c
        DAY-2/array_elm_pointers.c
        DAY-4/stu_avg.cpp
        DAY-4/faculties_details.cpp
        DAY-5/SI.cpp
        DAY-5/func_overload_area.cpp)
